[package]
name = "boon"
version = "0.1.1"
authors = ["Cameron McHenry <camchenry@users.noreply.github.com>"]
edition = "2018"

[dependencies]
zip = "0.5.5"
clap = "2.33"
walkdir = "2.3.1"
app_dirs = "1.2.1"
reqwest = { version = "0.10.4", features = ["blocking"] }
config = "0.10.1"
fs_extra = "1.1.0"
regex = "1.3.5"
remove_dir_all = "0.5.2"
glob = "0.3.0"
anyhow = "1.0.26"
