[package]
name = "boon"
version = "0.2.0"
authors = ["Cameron McHenry <camchenry@users.noreply.github.com>"]
edition = "2018"

[dependencies]
zip = "0.5.13"
clap = "2.33"
walkdir = "2.3.2"
app_dirs = "1.2.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
config = "0.11.0"
fs_extra = "1.2.0"
regex = "1.5.4"
glob = "0.3.0"
anyhow = "1.0.42"
prettytable-rs = "0.8.0"
humansize = "1.1.1"
structopt = "0.3"
enum-primitive-derive = "0.2"
num-traits = "0.2"