[package]
name = "boon"
version = "0.4.0"
authors = ["Cameron McHenry <camchenry@users.noreply.github.com>"]
edition = "2021"
license = "MIT"
description = "A cross-platform build tool for LÖVE"
repository = "https://github.com/camchenry/boon"
keywords = ["love2d", "love"]
categories = ["command-line-utilities"]

[dependencies]
zip = "0.6.6"
clap = "2.34"
walkdir = "2.4.0"
directories = "5.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
config = "0.11.0"
fs_extra = "1.3.0"
regex = "1.10.2"
remove_dir_all = "0.8"
glob = "0.3.1"
anyhow = "1.0.79"
prettytable-rs = "0.10.0"
humansize = "1.1.1"
structopt = "0.3"
enum-primitive-derive = "0.2"
num-traits = "0.2"
